# CHTL-NEWORIGIN

./: .chtlrc  .github_release_template.md  .gitignore  ACHIEVEMENTS.md  ARCHITECTURE_CLEANUP_PLAN.md  CHANGELOG.md  CHECKLIST.md  CHTL.md  CHTLCompiler  CHTL_PROJECT_SUMMARY.md  CHTL_Review_Report.md  CHTL_Review_Roadmap.md  CHTL_UNIFIED_SCANNER_SUMMARY.md  CHTL_V2.5.0_FINAL.txt  CHTL_V2.5.0_FINAL_COMPLETE.txt  CHTL_V2.5.0_PERFECT_FINAL.md  CHTL_VERSION_SUMMARY.md  CHTL_v1.0.0_RELEASE.md  CHTL_v1.1.0_PROGRESS.md  CHTL_v2.0.0_FINAL.md  CHTL_v2.0.0_FINAL_RELEASE.md  CHTL_v2.1.0_FINAL_RELEASE.md  CHTL_v2.1.0_PROJECT_COMPLETE.md  CHTL_v2.5.0_COMPLETE.md  CHTL_v2.5.0_FINAL_RELEASE.md  CHTL_v2.5.0_FINAL_SUMMARY.txt  CHTL_v2.5.0_MODULE_RELEASE.md  CHTL_v2.5.0_MODULE_SYSTEM_REPORT.md  CLI_USAGE.md  CMakeCache.txt  CMakeLists.txt  COMMIT_MESSAGE.txt  COMMIT_v2.6.0.txt  COMPREHENSIVE_AUDIT_REPORT.md  CONDITIONAL_RENDERING_PROGRESS.md  CONTRIBUTING.md  CTestTestfile.cmake  CURRENT_STATUS.md  CURRENT_STATUS_ANALYSIS.md  Code_Review_Report.md  (+280 more)
CHTL/: AstVisitor.h  CHTL.cpp  CHTLContext.cpp  CHTLContext.h  CHTLExpressionParser.cpp  CHTLExpressionParser.h  CMakeLists.txt  Compiler.cpp  Compiler.h  E2ETest  ExpressionEvaluator.cpp  ExpressionEvaluator.h  LexerTest  Loader.cpp  Loader.h  Parser.cpp  Parser.h  ParserTest  SemanticAnalyzer.cpp  SemanticAnalyzer.h  dummy.cpp  main.cpp
CHTL JS/: CHTLJSContext.cpp  CHTLJSContext.h  CMakeLists.txt
CHTL JS/CHTLJSGenerator/: CHTLJSGenerator.cpp  CHTLJSGenerator.h
CHTL JS/CHTLJSLexer/: CHTLJSLexer.cpp  CHTLJSLexer.h  CHTLJSToken.h
CHTL JS/CHTLJSNode/: CHTLJSNode.cpp  CHTLJSNode.h  CHTLJS_BaseNode.h  EnhancedSelectorNode.h  ListenNode.h  RawJSNode.h  SelectorNode.h
CHTL JS/CHTLJSParser/: CHTLJSParser.cpp  CHTLJSParser.h
CHTL/CHTL/: CMakeLists.txt
CHTL/CHTLContext/: CHTLContext.cpp  CHTLContext.h  CMakeLists.txt  Configuration.h  ConfigurationManager.cpp  ConfigurationManager.h  Context.cpp  Context.h  GenerationContext.h  NamespaceData.h
CHTL/CHTLEvaluator/: ExpressionEvaluator.cpp  ExpressionEvaluator.h  StyleEvaluator.cpp  StyleEvaluator.h
CHTL/CHTLExpr/: BaseExprNode.h  BinaryOpNode.h  ExprParser.cpp  ExprParser.h  IdentifierNode.h  LiteralNode.h  PropertyAccessNode.h  TernaryOpNode.h  VarUsageNode.h
CHTL/CHTLGenerator/: AstPrinter.cpp  AstPrinter.h  CHTLGenerator.cpp  CHTLGenerator.h  CMakeLists.txt  CodeGenerator.cpp  CodeGenerator.h  ExpressionEvaluator.cpp  ExpressionEvaluator.h  Generator.cpp  Generator.h  HtmlGenerator.cpp  HtmlGenerator.h  Visitor.h
CHTL/CHTLLexer/: CHTLLexer.cpp  CHTLLexer.h  CMakeLists.txt  GlobalMap.cpp  GlobalMap.h  Lexer.cpp  Lexer.h  Token.cpp  Token.h  TokenType.h
CHTL/CHTLLoader/: CHTLLoader.cpp  CHTLLoader.h  Loader.cpp  Loader.h
CHTL/CHTLManage/: StyleEnhancer.cpp  StyleEnhancer.h  TemplateManager.cpp  TemplateManager.h
CHTL/CHTLManager/: TemplateManager.cpp  TemplateManager.h
CHTL/CHTLNode/: AnimateNode.h  AstVisitor.h  AttributeNode.h  (+117 more)
CLI/: CLIApp.cpp  CLIApp.h  CMakeLists.txt  CommandLineParser.cpp  CommandLineParser.h  CompilerMonitor.cpp  CompilerMonitor.h  main.cpp
CSS/: CMakeLists.txt  CSSCompiler.cpp  CSSCompiler.h
CodeMerger/: CMakeLists.txt  CodeMerger.cpp  CodeMerger.h  Merger.cpp  Merger.h  merger.py
CompilerDispatcher/: CMakeLists.txt  CompilerDispatcher.cpp  CompilerDispatcher.h  Dispatcher.cpp  Dispatcher.h  dispatcher.py  main.cpp
JS/: CMakeLists.txt  JSCompiler.cpp  JSCompiler.h  compiler.py
Scanner/: CHTLUnifiedScanner.cpp  CHTLUnifiedScanner.h  CMakeLists.txt  PlaceholderStrategy.cpp  PlaceholderStrategy.h  ScanResult.h  Scanner.cpp  SliceStrategy.cpp  SliceStrategy.h  StateMachine.cpp  StateMachine.h  Strategy.cpp  Strategy.h  UnifiedScanner.cpp  UnifiedScanner.h  unified_scanner.py
Test/: AttributeAutomatorTest.cpp  AttributeOperationTest.cpp  CHTLIntegration_test.cpp  CHTLJSCompiler_test.cpp  CHTLJSTest.cpp  CHTLLexer_test.cpp  CHTLParserTest.cpp  CHTLParser_test.cpp  CMakeLists.txt  ConditionTest.cpp  ConditionalBlockTest.cpp  ConditionalPropertyTest.cpp  ConditionalRenderingTest.cpp  ConditionalTest.cpp  ConfigurationTest.cpp  ConstraintTest.cpp  ConstraintsTest.cpp  CssGeneratorTest.cpp  CustomElementTest.cpp  CustomStyleTest.cpp  DynamicConditionalRenderingTest.cpp  DynamicRenderingTest.cpp  ErrorReportingTest.cpp  EvaluatorTest.cpp  ExceptTest.cpp  ExpressionEvaluatorTest.cpp  ExpressionParserTest.cpp  ExpressionTest.cpp  GeneratorTest.cpp  IfBehaviorTest.cpp  IfParserTest.cpp  IfStatementTest.cpp  ImgTagTest.cpp  ImportResolverTest.cpp  ImportTest.cpp  IntegrationTest.cpp  JsGeneratorTest.cpp  LexerTest.cpp  LoaderTest.cpp  LocalStyleTest.cpp  (+32 more)
Util/: CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  FileLoader.h  StringUtils.cpp  StringUtils.h  Util.cpp
src/: AST.h  CMakeLists.txt  CodeMerger.cpp  Common.h  Compiler.cpp  CompilerDispatcher.cpp  ExpressionAST.h  ExpressionParser.cpp  ExpressionParser.h  Generator.cpp  Generator.h  Lexer.cpp  Lexer.h  Loader.cpp  Loader.h  Parser.cpp  Parser.h  ValueLexer.cpp  ValueLexer.h  main.cpp  version.h.in
test/: CMakeLists.txt  test_element_parsing.cpp  test_generator.cpp  test_lexer.cpp  test_main.cpp  test_parser.cpp
tests/: CHTLJSCompiler.cpp  CHTLJSGeneratorTest.cpp  CHTLJSTest.cpp  CHTLParserTest.cpp  CJMODAPITest.cpp  CJMODCodeGenTest.cpp  CLILogicTest.cpp  CMakeLists.txt  CoreFeatures.cpp  CoreFeaturesTest.cpp  ExpressionEngineTest.cpp  GeneratorTest.cpp  ImportTests.cpp  LibSassIntegrationTest.cpp  ModuleSystemTest.cpp  OfficialModulesTest.cpp  Placeholder.cpp  PlaceholderVerification.cpp  QuickJSIntegrationTest.cpp  ScannerTest.cpp  animate_test.cpp  basic_test.cpp  cli_test.cpp  compiler_test.cpp  conditional_rendering_test.cpp  context_awareness_test.cpp  css_rules_expression_test.cpp  delegate_test.cpp  enhanced_selector_test.cpp  event_bind_operator_test.cpp  expression_integration_test.cpp  lexer_test.cpp  listen_syntax_test.cpp  main.cpp  mature_compiler_test.cpp  mixed_script_test.cpp  module_test.cpp  preprocessor_test.cpp  property_reference_test.cpp  scanner_test.cpp  (+17 more)
(+1008 files in other folders)
